--- a/Ritika_sd_.vcxproj.filters
+++ b/Ritika_sd_.vcxproj.filters
@@ -65,5 +65,8 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="AssemProg.txt" />
+    <Text Include="TextFile1.txt">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
