--- a/Ritika_sd_.vcxproj
+++ b/Ritika_sd_.vcxproj
@@ -149,6 +149,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="AssemProg.txt" />
+    <Text Include="TextFile1.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
